# DynamicDiscreteSamplersComparisons

./: .gitignore  BUS_optimized_bench.jl  EBUS_bench.jl  LICENSE  Manifest.toml  Project.toml  README.md  compare.jl  dynamic_fixed.csv  dynamic_variable.csv  install.sh  plot.jl  run.sh  static.csv
alias_table/: ALIAS_TABLE_bench.jl
bus/WSS-WIRS/: CMakeLists.txt
bus/WSS-WIRS/include/WSSWIRS/: QuickBucket.hpp  utility.h
bus/WSS-WIRS/source/: main.cpp
data/: bus_numerical.csv  dynamic_fixed.csv  dynamic_variable.csv  ebus_numerical.csv  forest_of_trees_numerical.csv  proposal_array_numerical.csv  static.csv
ebus/: EBUS_bench.jl
forest_of_trees/: Cargo.toml
forest_of_trees/src/: main.rs
proposal_array/: CMakeLists.txt
proposal_array/include/sampling/: DynamicProposalArrayStar.hpp
proposal_array/source/: main.cpp
proposal_array/source/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
